Tue Aug 24 17:30:00 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/cgi/session.rb (CGI::Session::FileStore#initialize): do not
	  use a session id as a filename. (backported from HEAD)

	* lib/cgi/session/pstore.rb (CGI::Session::PStore#initialize): ditto.

	* lib/cgi/session/pstore.rb (CGI::Session::PStore#initialize): use
	  Dir::tmpdir. (backported from HEAD)

Tue Aug 24 14:40:16 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/cgi/session.rb (CGI::Session::FileStore#initialize): untaint
	  session id after check. (backported from HEAD)

Tue Aug 24 09:09:01 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_x509attr.c (ossl_x509attr_initialize): d2i
	  functions may replace the pointer indicated by the first argument.

	* ext/openssl/ossl_x509ext.c (ossl_x509ext_initialize): ditto.

	* ext/openssl/ossl_x509name.c (ossl_x509name_initialize): ditto.

Mon Aug 23 14:04:51 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_read):
	  - should return an empty string if specified length to read is 0.
	  - should check for pending data and wait for fd before reading.
	  - call underlying IO's sysread if SSL session is not started.
	  [ruby-dev:24072], [ruby-dev:24075]

	* ext/openssl/ossl_ssl.c (ossl_ssl_write):
	  - call underlying IO's syswrite if SSL session is not started.

	* ext/openssl/ossl_ssl.c (ossl_ssl_pending): new method
	  OpenSSL::SSL#pending.

	* ext/openssl/lib/openssl/buffering.rb: should not use select.

Mon Aug 23 12:40:56 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/resolv.rb (Config.default_config_hash): when multiple domains
	  are set, Win32::Resolv.get_resolv_info returns Array.

Sun Aug 22 01:15:31 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpproxy.rb (WEBrick::HTTPProxyServer#proxy_connect):
	  should call :ProxyContentHandler before finishing CONNECT.

Sat Aug 21 06:41:16 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
